--- a/christmas-shop/css/index.css
+++ b/christmas-shop/css/index.css
@@ -1,3 +1,4 @@
+@import '../node_modules/modern-normalize/modern-normalize.css';
 @font-face {
   font-family: "Montserrat";
   src: url("../assets/fonts/Montserrat/Montserrat-Regular.ttf") format("ttf");
@@ -363,7 +364,8 @@ html {
 
 body {
   background-color: #FFFFFF;
-  overflow-x: hidden;
+  margin: 0;
+  padding: 0;
 }
 
 ul {
@@ -470,8 +472,6 @@ a {
 }
 .about_img > img {
   display: block;
-  width: 100%;
-  height: 100%;
   border-radius: 20px;
 }
 
