--- a/christmas-shop/sass/pages/_main-home.scss
+++ b/christmas-shop/sass/pages/_main-home.scss
@@ -51,8 +51,6 @@
 		width: 50%;
 		& > img {
 			display: block;
-			width: 100%;
-			height: 100%;
 			border-radius: 20px;
 		}
 	}
